--- a/coalesce.html
+++ b/coalesce.html
@@ -16,21 +16,31 @@
 
 
 	// plot(result, -400, 400, "mag");
-	const N = 16384;
+	var N = 2048
 	var spins = [];
-	for (var i = 0; i < 256; i++) {
-		spins.push(gen(1, 3, 0.0001, 0.005));
-		spins.push(gen(6, 8, 0.001, 0.005));
-		spins.push(gen(11, 13, 0.01, 0.005));
-		spins.push(gen(16, 18, 0.1, 0.005));
-		spins.push(gen(21, 23, 1, 0.005));
+	var ps = [];
+	for (var i = 0; i < 32; i++) {
+		ps.push(constg(1.0e-4));
+		spins.push(osc(cum(pmux(2, 16, ps[i]), 0.01, Math.random() * 2 *Math.PI)));
+	}
+
+	function update(newp) {
+		for (var p of ps) {
+			p.next(Math.pow(10, parseFloat(newp)));
+		}
+		document.getElementById("p").innerHTML = newp;
 	}
 
 	var a = axes("n", "fft_mag", true);
-	var g = map(spec(continuous(add.apply(null, spins), N), N), function(a) { return a.slice(0, N/32); });
+	var g = map(spec(pad(every(continuous(add(spins), N, true), 16), 0.0, 7 * N), 8 * N),
+							function(a) { return a.slice(0, N/4); });
 	// var g = map(continuous(add.apply(null, spins), N), function(a) { return a.slice(0, N/2); });
 	console.log("Done");
 	monitor(g, a, 30);
 </script>
+<span id = "p">-4</span>
+<form>
+	<input type="range" min="-10" max="0" value="-4" step="0.05" onchange="update(this.value)" />
+</form>
 </body>
 </html>
