--- a/coalesce.html
+++ b/coalesce.html
@@ -3,18 +3,24 @@
 <head>
 	<title>Frequency Coalescence</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="d3.v3.min.js" charset="utf-8"></script>
-	<script src="fft-asm.js" charset="utf-8"></script>
-	<script src="fft-asm-noasm.js" charset="utf-8"></script>
-	<script src="fft-asm-lib.js" charset="utf-8"></script>
-	<script src="gen-utils.js" charset="utf-8"></script>
-	<script src="plot-utils.js" charset="utf-8"></script>
+	<script src="node_modules/systemjs/dist/system.js"></script>
 </head>
 <body>
-	<script type="text/javascript" charset="utf-8" ></script>
 <span id = "p">-4</span>
 <form>
 	<input type="range" min="-10" max="0" value="-4" step="0.05" onchange="update(this.value)" />
 </form>
+<script>
+  // set our baseURL reference path
+  SystemJS.config({
+    map: {
+		d3: 'node_modules/d3/build/d3.min.js'
+	}
+  });
+
+  // loads /js/main.js
+  System.defaultJSExtensions = true;
+  SystemJS.import('core.js');
+</script>
 </body>
 </html>
