--- a/coalesce.html
+++ b/coalesce.html
@@ -8,7 +8,7 @@
 <body>
 <span id = "p">-4</span>
 <form>
-	<input type="range" min="-10" max="0" value="-4" step="0.05" onchange="update(this.value)" />
+	<input id="slider" type="range" min="-10" max="0" value="-4" step="0.05" />
 </form>
 <script>
   // set our baseURL reference path
